-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
Update lock_page_memcg configure test
Newer kernels such as 5.16 fail the compile test with:
ERROR: modpost: "lock_page_memcg" [../build/conftest.ko] undefined!
Change the test so it does not require the modpost result.
Alternatively a dummy Module.symvers can be generated to
resolve the modpost failure.
See also current parallel build series which adds the ability to generate a dummy Module.symvers.